# firefly

./: Cargo.toml  README.md
assets/shaders/: multiply.wgsl  noise.wgsl  transfer.wgsl
examples/: README.md  blending.rs  composite.rs  crates.rs  flashlight.rs  fov.rs  grid_stress.rs  instancing.rs  noise.rs  render_layers.rs  shapes.rs  simple.rs  stress.rs  test.rs
release-notes/: 0.18.1.md  0.18.2.md
src/: app.rs  composite_sprite.rs  data.rs  extract.rs  lib.rs  lights.rs  nodes.rs  occluders.rs  pipelines.rs  prepare.rs  sprite.rs  sprites.rs  utils.rs  visibility.rs
src/shaders/: create_lightmap.wgsl  types.wgsl
