[package]
name = "bevy_firefly"

version = "0.18.1-alpha"
description = "2d lighting crate for the Bevy game engine"

exclude = ["examples/*", "assets/*"]

repository = "https://github.com/PVDoriginal/firefly/"

license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "2d", "lighting", "bevy"]

edition = "2024"

[dependencies]
bevy = { git = "https://github.com/isidornygren/bevy", branch = "composite-sprite", version = "0.18", default-features = false, features = [
    "debug",
    "bevy_gizmos",
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_sprite_render",
    "x11",
    "bevy_log",
    "async_executor",
    "bevy_camera",
] }

bitflags = "2.10.0"
bytemuck = "1.24.0"
fixedbitset = "0.5.7"


[dev-dependencies]
rand = "0.9.2"
bevy = { git = "https://github.com/isidornygren/bevy", branch = "composite-sprite", version = "0.18" }
