[package]
name = "bevy_firefly"

version = "0.18.2"
description = "2d lighting crate for the Bevy game engine"

exclude = ["examples/*", "assets/*"]

repository = "https://github.com/PVDoriginal/firefly/"

license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "2d", "lighting", "bevy"]

edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "debug",
    "bevy_gizmos",
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_sprite_render",
    "x11",
    "bevy_log",
    "async_executor",
    "bevy_camera",
] }

bitflags = "2.10.0"
bytemuck = "1.24.0"
fixedbitset = "0.5.7"

serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "bevy/serialize"]

[dev-dependencies]
rand = "0.9.2"

# bevy = { version = "0.18", features = ["webgpu", "file_watcher", "embedded_watcher"] }
bevy = { version = "0.18", features = ["webgpu"] }

getrandom = { version = "0.3.4", features = ["wasm_js"] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
